fixed: overlapping contents in create link page | Quick Setup

--- a/assets/scss/components/_quick-setup.scss
+++ b/assets/scss/components/_quick-setup.scss
@@ -341,7 +341,7 @@
 								}
 								.btl-modal-form-control {
 									min-height: 45px;
-									padding: 0 10px;
+									padding: 0 83px 0 10px;
 									font-size: 14px;
 								}
 								.btl-modal-select--full {
